--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "dishka>=1.6.0",
     "fastapi[all]>=0.116.1",
     "langchain>=0.3.26",
     "langgraph>=0.5.3",
