--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "fastapi[all]>=0.116.1",
     "langchain>=0.3.26",
     "langgraph>=0.5.3",
+    "mypy>=1.17.0",
     "networkx>=3.5",
+    "spacy>=3.8.7",
 ]
