--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ dependencies = [
     "dishka>=1.6.0",
     "fastapi[all]>=0.116.1",
     "langchain>=0.3.26",
+    "langchain-gigachat>=0.3.11",
     "langgraph>=0.5.3",
+    "markitdown>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
     "spacy>=3.8.7",
