--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,16 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "aspose-cells-python>=25.7.0",
     "dishka>=1.6.0",
     "fastapi[all]>=0.116.1",
     "langchain>=0.3.26",
     "langchain-gigachat>=0.3.11",
     "langgraph>=0.5.3",
-    "markitdown>=0.1.2",
+    "markitdown[all]>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
     "spacy>=3.8.7",
+    "weaviate-client>=4.16.1",
+    "xmltodict>=0.14.2",
 ]
