--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "mypy>=1.17.0",
     "networkx>=3.5",
     "spacy>=3.8.7",
+    "sqlalchemy>=2.0.41",
     "weaviate-client>=4.16.1",
     "xmltodict>=0.14.2",
 ]
