--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,16 @@ dependencies = [
     "langchain>=0.3.26",
     "langchain-gigachat>=0.3.11",
     "langgraph>=0.5.3",
+    "llama-index>=0.12.52",
     "markitdown[all]>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
+    "pymupdf4llm>=0.0.27",
     "spacy>=3.8.7",
     "sqlalchemy>=2.0.41",
     "transformers>=4.53.2",
+    "tree-sitter>=0.25.0",
+    "tree-sitter-language-pack>=0.9.0",
     "weaviate-client>=4.16.1",
     "xmltodict>=0.14.2",
 ]
