--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,14 @@ dependencies = [
     "langchain-gigachat>=0.3.11",
     "langgraph>=0.5.3",
     "llama-index>=0.12.52",
+    "llama-index-extractors-entity>=0.3.1",
+    "llama-index-readers-file>=0.4.11",
     "markitdown[all]>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
     "pymupdf4llm>=0.0.27",
     "spacy>=3.8.7",
+    "span-marker>=1.7.0",
     "sqlalchemy>=2.0.41",
     "transformers>=4.53.2",
     "tree-sitter>=0.25.0",
