--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ python-dotenv~=1.1.1
 weaviate-client~=4.16.1
 xmltodict~=0.14.2
 SQLAlchemy~=2.0.41
+llama-index-core~=0.12.52.post1
+pymupdf4llm~=0.0.27
