--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     - http
     image: cr.weaviate.io/semitechnologies/weaviate:1.32.0
     ports:
-    - 8080:8080
+    - 8090:8080
     - 50051:50051
     volumes:
     - weaviate_data:/var/lib/weaviate
@@ -21,5 +21,14 @@ services:
       ENABLE_API_BASED_MODULES: "true"
       CLUSTER_HOSTNAME: "node1"
 
+  redis:
+    image: redis:6-alpine
+    restart: unless-stopped
+    volumes:
+      - redis_data:/data
+    ports:
+      - "8379:6379"
+
 volumes:
   weaviate_data:
+  redis_data:
