--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,14 @@ dependencies = [
     "dishka>=1.6.0",
     "fastapi[all]>=0.116.1",
     "langchain>=0.3.26",
+    "langchain-community>=0.3.27",
     "langchain-gigachat>=0.3.11",
     "langgraph>=0.5.3",
     "llama-index>=0.12.52",
+    "llama-index-embeddings-huggingface>=0.5.5",
     "llama-index-extractors-entity>=0.3.1",
     "llama-index-readers-file>=0.4.11",
+    "llama-index-vector-stores-weaviate>=1.3.1",
     "markitdown[all]>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
