--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "mypy>=1.17.0",
     "networkx>=3.5",
     "pymupdf4llm>=0.0.27",
+    "python-ulid>=3.0.0",
+    "redis>=6.2.0",
+    "redisvl>=0.8.0",
     "spacy>=3.8.7",
     "span-marker>=1.7.0",
     "sqlalchemy>=2.0.41",
