--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,8 @@ SQLAlchemy~=2.0.41
 llama-index-core~=0.12.52.post1
 pymupdf4llm~=0.0.27
 langchain-community~=0.3.27
+langgraph~=0.5.3
+ulid~=1.1
+python-ulid~=3.0.0
+redisvl~=0.8.0
+redis~=6.2.0
