--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain>=0.3.26",
     "langchain-community>=0.3.27",
     "langchain-gigachat>=0.3.11",
+    "langchain-redis>=0.2.3",
     "langgraph>=0.5.3",
     "llama-index>=0.12.52",
     "llama-index-embeddings-huggingface>=0.5.5",
