--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       CLUSTER_HOSTNAME: "node1"
 
   redis:
-    image: redis:6-alpine
+    image: redis/redis-stack-server:latest
     restart: unless-stopped
     volumes:
       - redis_data:/data
