--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "langchain-huggingface>=0.3.1",
     "langchain-redis>=0.2.3",
     "langgraph>=0.5.3",
+    "langgraph-checkpoint>=2.1.0",
+    "langgraph-checkpoint-redis>=0.0.8",
     "llama-index>=0.12.52",
     "llama-index-embeddings-huggingface>=0.5.5",
     "llama-index-extractors-entity>=0.3.1",
