--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-gigachat>=0.3.11",
     "langchain-huggingface>=0.3.1",
     "langchain-redis>=0.2.3",
+    "langchain-weaviate>=0.0.5",
     "langgraph>=0.5.3",
     "langgraph-checkpoint>=2.1.0",
     "langgraph-checkpoint-redis>=0.0.8",
