--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "antlr4-python3-runtime>=4.13.2",
     "aspose-cells-python>=25.7.0",
     "dishka>=1.6.0",
     "fastapi[all]>=0.116.1",
@@ -16,11 +17,13 @@ dependencies = [
     "langgraph>=0.5.3",
     "langgraph-checkpoint>=2.1.0",
     "langgraph-checkpoint-redis>=0.0.8",
+    "lark>=1.2.2",
     "llama-index>=0.12.52",
     "llama-index-embeddings-huggingface>=0.5.5",
     "llama-index-extractors-entity>=0.3.1",
     "llama-index-readers-file>=0.4.11",
     "llama-index-vector-stores-weaviate>=1.3.1",
+    "loguru>=0.7.3",
     "markitdown[all]>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
