--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[all]>=0.116.1",
     "langchain>=0.3.26",
     "langchain-community>=0.3.27",
+    "langchain-elasticsearch>=0.3.2",
     "langchain-gigachat>=0.3.11",
     "langchain-huggingface>=0.3.1",
     "langchain-redis>=0.2.3",
@@ -36,6 +37,7 @@ dependencies = [
     "transformers>=4.53.2",
     "tree-sitter>=0.25.0",
     "tree-sitter-language-pack>=0.9.0",
+    "unstructured>=0.18.11",
     "weaviate-client>=4.16.1",
     "xmltodict>=0.14.2",
 ]
