--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,36 @@
 services:
-  weaviate:
-    command:
-    - --host
-    - 0.0.0.0
-    - --port
-    - "8080"
-    - --scheme
-    - http
-    image: cr.weaviate.io/semitechnologies/weaviate:1.32.0
-    ports:
-    - "8090:8080"
-    - "50051:50051"
-    volumes:
-    - weaviate_data:/var/lib/weaviate
-    restart: on-failure:0
-    environment:
-      QUERY_DEFAULTS_LIMIT: 25
-      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
-      PERSISTENCE_DATA_PATH: "/var/lib/weaviate"
-      ENABLE_API_BASED_MODULES: "true"
-      CLUSTER_HOSTNAME: "node1"
-
   redis:
-    image: redis/redis-stack-server:latest
+    image: redis:alpine
     restart: unless-stopped
     volumes:
       - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+
+  elasticsearch:
+    image: elasticsearch:8.16.1
+    environment:
+      ES_JAVA_OPTS: "-Xmx512m -Xms512m"
+      ELASTIC_USERNAME: ${ELASTIC_USERNAME}
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
+      discovery.type: single-node
+    volumes:
+      - .docker/configs/elasticsearch/config.yml:/usr/share/elasticsearch/docker/config/elasticsearch.yml:ro
+      - elasticsearch_data:/usr/share/elasticsearch/data
     ports:
-      - "8379:6379"
+      - "9202:9200"
+      - "9302:9300"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -s -u $${ELASTIC_USERNAME}:$${ELASTIC_PASSWORD} http://localhost:9200/_cluster/health | grep -q '\"status\":\"yellow\"'" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
 
 volumes:
-  weaviate_data:
+  elasticsearch_data:
   redis_data:
