--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-elasticsearch>=0.3.2",
     "langchain-gigachat>=0.3.11",
     "langchain-huggingface>=0.3.1",
+    "langchain-pinecone>=0.2.11",
     "langchain-redis>=0.2.3",
     "langchain-weaviate>=0.0.5",
     "langgraph>=0.5.3",
