--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "markitdown[all]>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
+    "pydantic-ai>=0.7.2",
+    "pydantic-graph>=0.7.2",
     "pymupdf4llm>=0.0.27",
     "python-ulid>=3.0.0",
     "pytz>=2025.2",
