--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "llama-index-readers-file>=0.4.11",
     "llama-index-vector-stores-weaviate>=1.3.1",
     "loguru>=0.7.3",
+    "markdown>=3.8.2",
     "markitdown[all]>=0.1.2",
     "mypy>=1.17.0",
     "networkx>=3.5",
