--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi~=0.116.1
+fastapi[all]~=0.116.1
 dishka~=1.6.0
 pydantic~=2.11.7
+langchain~=0.3.26
 langchain-core~=0.3.69
 langchain-text-splitters~=0.3.8
 python-dotenv~=1.1.1
@@ -9,6 +10,7 @@ pymupdf4llm~=0.0.27
 langchain-community~=0.3.27
 langchain-gigachat~=0.3.11
 langchain-huggingface~=0.3.1
+langchain-pinecone~=0.2.11
 redis~=6.2.0
 sentence-transformers~=5.0.0
 pydantic-settings~=2.10.1
